# Racemenu-Morph-Enforcer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg.json
include/: logger.h  pch.h  settings.h  skee.h
include/core/: arrow_weight_sink.h  gfx_ei_hook.h  racemenu_ei_driver.h  racemenu_event_watcher.h  racemenu_watcher.h
include/features/: morph_updater.h
include/helpers/: consts.h  keybind.h  keycombo.h  string.h  ui.h
resources/: racemenumorphfixer.ini
src/: arrow_weight_sink.cpp  arrow_weight_sink.h  logger.cpp  logger.h  main.cpp  morph_updater.cpp  morph_updater.h  pch.h  racemenu_event_watcher.cpp  racemenu_event_watcher.h  racemenu_watcher.cpp  racemenu_watcher.h  settings.cpp  settings.h  skee.h
src/core/: arrow_weight_sink.cpp  gfx_ei_hook.cpp  racemenu_ei_driver.cpp  racemenu_event_watcher.cpp  racemenu_watcher.cpp
src/features/: morph_updater.cpp
src/helpers/: consts.h  keybind.cpp  keybind.h  racemenu_ei_driver.cpp  racemenu_ei_driver.h  string.cpp  string.h  ui.cpp  ui.h
src/hooks/: gfx_ei_hook.cpp  gfx_ei_hook.h  gfx_invoke_hook.cpp  gfx_invoke_hook.h
